samples/_failures_safe/1761311097_66d625_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_711d41bc.c: In function ‘main’:
./samples/SAFE/__tmp_711d41bc.c:174:16: error: missing terminating " character
  174 |         printf("Failed to
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_711d41bc.c:174:9: error: expected expression at end of input
  174 |         printf("Failed to
      |         ^~~~~~
./samples/SAFE/__tmp_711d41bc.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_711d41bc.c:174:9: error: expected declaration or statement at end of input
